# opensolid-fable

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/opensolid-brep/: Cargo.toml
crates/opensolid-brep/src/: boolean.rs  check.rs  curve.rs  euler.rs  geometry.rs  lib.rs  primitives.rs  project.rs  surface.rs  sweep.rs  tessellate.rs  topology.rs  transform.rs  triangulate.rs
crates/opensolid-brep/src/nurbs/: curve.rs  mod.rs  surface.rs
crates/opensolid-brep/src/ssi/: analytic.rs  marching.rs  mod.rs
crates/opensolid-brep/tests/: block_cylinder_boolean.rs  boolean_stress.rs
crates/opensolid-core/: Cargo.toml
crates/opensolid-core/src/: arena.rs  bvh.rs  error.rs  interval.rs  lib.rs  mesh.rs  tolerance.rs  types.rs
crates/opensolid-frep/: Cargo.toml
crates/opensolid-frep/benches/: frep_bench.rs
crates/opensolid-frep/src/: blend.rs  csg.rs  eval.rs  fillet.rs  lib.rs  mesh.rs  mesh_adaptive.rs  ops.rs  pattern.rs  primitives.rs  profile.rs  refine.rs  shape.rs  sweep.rs  test_util.rs  transform.rs
crates/opensolid-frep/src/diff/: dual.rs  field.rs  mod.rs  objective.rs  optimize.rs  param.rs  scalar.rs  vec.rs
crates/opensolid-frep/tests/: grad_fd_agreement.rs  param_grad_fd.rs  property_invariants.rs
crates/opensolid-kernel/: Cargo.toml
crates/opensolid-kernel/examples/: demo.rs  optimize_bracket.rs
crates/opensolid-kernel/src/: assembly.rs  builder.rs  bvh.rs  hybrid.rs  lib.rs  massprops.rs  mesh.rs  session.rs
crates/opensolid-kernel/src/assembly/: mates.rs  solver.rs
crates/opensolid-kernel/src/convert/: brep_to_sdf.rs  mod.rs  sdf_to_brep.rs
crates/opensolid-kernel/src/io/: mod.rs  obj.rs  stl.rs
crates/opensolid-kernel/src/io/step/: lex.rs  mod.rs  parse.rs  read.rs  write.rs
crates/opensolid-kernel/tests/: assembly_solver.rs  hybrid_e2e.rs  integration_e2e.rs  step_corpus.rs
crates/opensolid-kernel/tests/data/step/: README.md
crates/opensolid-wasm/: Cargo.toml
crates/opensolid-wasm/src/: bounded.rs  exact.rs  lib.rs  step.rs
crates/opensolid-wasm/tests/: hybrid_consume.rs  repro_o0o.rs
docs/: AGENT_GUIDE.md  PARITY.md  PIPELINE.md  dogfood-bracket-friction-log.md  parametric-rebuild.md  units.md
docs/design/: ASSEMBLIES.md  COINCIDENT.md  DIFFERENTIABLE.md  DRAWINGS.md  FREEFORM.md  edge-fillet-chamfer.md
research/: cad-kernel.md  parasolid-reference.md  persona-postmortem.md  rust-ecosystem.md
spec/: 00-overview.md  01-data-model.md  02-geometry.md  03-topology.md  04-booleans.md  05-operations.md  06-step-io.md  07-tessellation.md  08-tolerances.md  09-session.md  10-api.md  11-testing.md  12-implementation-phases.md  13-ai-api-design.md  README.md
tools/mcp-server/: README.md  package-lock.json  package.json
tools/mcp-server/examples/: bracket-transcript.md
tools/mcp-server/examples/agent-gallery/: README.md  angle-bracket.md  bottle.md  bracket-right-angle.md  build-gallery.mjs  enclosure.md  gear-disk.md  hinge-leaf.md  optimize-bracket.md
tools/mcp-server/examples/output/: angle-bracket.stl  bottle.stl  bracket-right-angle.stl  enclosure-body.stl  enclosure-lid.stl  gear-disk.stl  hinge-leaf.stl  manifest.json  optimize-bracket.stl
tools/mcp-server/scripts/: build-wasm.mjs  check-pkg.mjs
tools/mcp-server/src/: kernel.js  mesh.js  optimize.js  png.js  render.js  server.js  tools.js
tools/mcp-server/test/: bracket-acceptance.test.js  build-gallery.test.js  optimize.test.js  tools.test.js  units.test.js
web/playground/: README.md  index.html  main.js  package-lock.json  package.json  stl.js  vite.config.js
web/playground/docs/: sketch-edit-tools.md
web/playground/scripts/: check-pkg.mjs
web/playground/src/: App.jsx  App.test.jsx  layout.test.jsx  main.jsx  styles.css
web/playground/src/components/: DrawingCanvas.jsx  DrawingCanvas.test.jsx  ErrorBoundary.jsx  ErrorBoundary.test.jsx  FeaturePanel.jsx  FeaturePanel.test.jsx  FeatureTree.jsx  FeatureTree.test.jsx  FilletPanel.jsx  FilletPanel.test.jsx  MainToolbar.jsx  MainToolbar.test.jsx  MassPropertiesPanel.jsx  MassPropertiesPanel.test.jsx  MeasurePanel.jsx  MeasurePanel.test.jsx  MeshSettings.jsx  MeshSettings.test.jsx  PropertyPanel.jsx  PropertyPanel.test.jsx  ReferencePanel.jsx  ReferencePanel.test.jsx  ScenePanel.jsx  SceneTree.jsx  ScriptEditor.jsx  SectionPanel.jsx  SectionPanel.test.jsx  SketchCanvas.jsx  SketchCanvas.test.jsx  StatusBar.jsx  SweepPanel.jsx  SweepPanel.test.jsx  Toolbar.jsx  Toolbar.test.jsx  ViewTriad.jsx  ViewTriad.test.jsx  Viewport3D.jsx  WasmErrorScreen.jsx
web/playground/src/lib/: defaultScript.js  defaultScript.test.js  (+66 more)
(+31 files in other folders)
