[workspace]
resolver = "2"
members = [
    "crates/opensolid-core",
    "crates/opensolid-frep",
    "crates/opensolid-brep",
    "crates/opensolid-kernel",
    "crates/opensolid-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/MC-Meesh/opensolid-fable"

[workspace.dependencies]
nalgebra = "0.33"
thiserror = "2"
rayon = "1"

# Dev-dependencies only (PM-approved exceptions to the minimal-deps rule;
# see ROADMAP.md). Never promote these to runtime [dependencies].
criterion = "0.5"
