[package]
name = "opensolid-brep"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "B-Rep topology and parametric geometry: NURBS curves/surfaces, face/edge/vertex graph"

[dependencies]
opensolid-core = { path = "../opensolid-core" }
nalgebra = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Dev-only dependency cycle (kernel depends on brep normally): the boolean
# stress suite cross-checks tessellations against kernel mass properties
# and the MeshSdf round-trip. Cargo permits cycles through dev-dependencies.
opensolid-kernel = { path = "../opensolid-kernel" }
