[package]
name = "opensolid-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings: runtime Shape builder and SDF meshing for the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
opensolid-core = { path = "../opensolid-core" }
opensolid-frep = { path = "../opensolid-frep" }
wasm-bindgen = "0.2"

[dev-dependencies]
# Native-only acceptance tests: the hybrid kernel result must feed the
# playground mesh path (of-ipt.3). Not part of the wasm32 artifact.
opensolid-kernel = { path = "../opensolid-kernel" }
