[package]
name = "opensolid-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings: runtime Shape builder and SDF meshing for the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
opensolid-core = { path = "../opensolid-core" }
opensolid-frep = { path = "../opensolid-frep" }
# Exact B-Rep boolean path for the playground (of-4eh.17). Pulls
# opensolid-brep transitively; size cost measured in the bead's design
# note (~+340 KB pre-wasm-opt).
opensolid-kernel = { path = "../opensolid-kernel" }
wasm-bindgen = "0.2"
